[workspace]

[package]
name = "zenoh-wasm-threaded-test"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zenoh = { path = "../../zenoh-wasm/zenoh", default-features = false, features = ["transport_ws"] }
zenoh-runtime = { path = "../../zenoh-wasm/commons/zenoh-runtime", features = ["wasm-threads"] }
flume = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
] }
tracing = "0.1.44"
tracing-wasm = "0.2.1"

# Prevent mio/net compilation on wasm32 by disabling default features on
# tokio and tokio-util. Without this, tokio-util enables tokio's "default"
# features which include "net" → "mio", and mio doesn't support wasm32.
[dependencies.tokio]
version = "1"
default-features = false
features = ["sync", "macros", "rt"]

[dependencies.tokio-util]
version = "0.7"
default-features = false
features = ["rt"]
